# flask-yolo-real-time

./: README.md  app.py  auth.py  detection.py  pyproject.toml  tracker.py  utils.py  Курсовой_проект_Анащенко_Гайнутдинов.docx
app/: app.py  auth.py  camera.py  config.py  db.py  models.py
app/templates/: index.html
templates/: index.html
