[tool.poetry]
name = "online-streaming-webrtc"
version = "0.1.0"
description = ""
authors = ["keshe4ka <a.anaschenko@btc-s.ru>"]
readme = "README.md"
packages = [{include = "online_streaming_webrtc"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.0.76"
flask = "^3.0.0"
flask-httpauth = "^4.8.0"
pydantic-settings = "^2.1.0"
ultralytics = "^8.1.2"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
